# McDonalds_assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task_md.md
src/: llm.py  main.py  manager.py  menu.py  order.py
src/data/: menu_virtual_items.yaml  parsed_menu.json  test.json
src/mcdonalds_proj/: llm.py  manager.py  menu.py  order.py
tests/: test_validation.py
